# sync-audio-js

./: .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  CNAME  LICENSE  README.md  package-lock.json  package.json  playwright.ci.config.js  playwright.config.js  rollup.config.js  server.js  tsconfig.json
.github/: pages.config.yml
.github/workflows/: ci-cd.yml  ci.yml  deploy-pages.yml  pages.yml  qa.yml  release.yml  tests.yml
docs/: index.html
example/: bluetooth.html  index.html  simple.html
scripts/: README.md  capture-screenshots.js  check-pages.js  generate-demo-video.js  record-gif.js  run-example-tests.sh  run-qa.js  start-test-server.sh
servers/: PROTOCOL.md  README.md  index.md
servers/go/: README.md  go.mod  server.go
servers/js/: README.md  package.json  server.js
servers/python/: README.md  requirements.txt  server.py
servers/rust/: Cargo.toml  README.md
servers/rust/src/: main.rs
src/: AudioDeviceManager.js  AudioPlayer.js  BluetoothLatency.js  ClockSync.js  database.js  index.js
tests/: README.md  ci-setup.js  ci-teardown.js  demo-video.spec.js  example.spec.js  global-setup.js  global-teardown.js  qa.spec.js  test_server.py
