[package]
name = "sync-audio-server-rust"
version = "0.1.0"
edition = "2021"
authors = ["SyncAudio Contributors"]
description = "SyncAudio WebSocket server - Rust implementation"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
